--- a/contracts/package.json
+++ b/contracts/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.5.0",
     "@openzeppelin/contracts-upgradeable": "4.5.2",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.6.6",
     "patch-package": "^6.4.7"
   },
@@ -64,8 +65,8 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.20",
-    "tslint": "^6.1.3",
     "ts-node": "^10.4.0",
+    "tslint": "^6.1.3",
     "typechain": "^8.0.0",
     "typescript": "^4.5.4"
   },
