--- a/.editorconfig
+++ b/.editorconfig
@@ -14,10 +14,11 @@ indent_style = space
 indent_size = 2
 tab_width = 2
 
+[*.sol]
+indent_style = space
+
 [*.md]
 indent_style = space
-indent_size = 4
-tab_width = 4
 
 [Makefile]
 indent_style = tab
