--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{js,ts,tsx}]
+[*.{js,ts,tsx,xml,yaml,yml,json}]
 indent_style = space
 indent_size = 2
 tab_width = 2
@@ -22,3 +22,4 @@ indent_style = space
 
 [Makefile]
 indent_style = tab
+
