--- a/.github/workflows/arbitrator-ci.yml
+++ b/.github/workflows/arbitrator-ci.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   coverage:
     name: Run Arbitrator tests
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-ubuntu-23.04
     steps:
       - name: Checkout
         uses: actions/checkout@v1
