--- a/.github/workflows/arbitrator-ci.yml
+++ b/.github/workflows/arbitrator-ci.yml
@@ -35,7 +35,7 @@ jobs:
           sudo add-apt-repository -y ppa:ethereum/ethereum
           sudo apt-get update && sudo apt-get install -y \
             build-essential cmake ethereum lld-14 libudev-dev
-          sudo ln -s /usr/bin/wasm-ld-14 /usr/local/bin/wasm-ld
+          sudo ln -sf /usr/bin/wasm-ld-14 /usr/local/bin/wasm-ld
 
       - name: Install go
         uses: actions/setup-go@v2
