--- a/.github/workflows/arbitrator-skip-ci.yml
+++ b/.github/workflows/arbitrator-skip-ci.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   coverage:
     name: Run Arbitrator tests
-    runs-on: self-hosted-ubuntu-23.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Do nothing
         run: echo "doing nothing"
