--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: self-hosted-ubuntu-23.04
+    runs-on: ubuntu-22.04
     permissions:
       actions: read
       contents: read
