--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -79,8 +79,8 @@ jobs:
         # https://github.com/docker/build-push-action/issues/252
         # https://github.com/moby/buildkit/issues/1896
         run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          sudo rm -rf /tmp/.buildx-cache
+          sudo mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Clear cache on failure
         if: failure()
