--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,18 +2,23 @@ name: Docker build
 
 on:
   workflow_dispatch:
-  pull_request:
-  push:
+  workflow_run:
+    workflows: [ "Go Tests" ]
     branches:
       - master
       - develop
+    types:
+      - completed
+  push:
+    tags:
+      - "v*.*.*"
 
 jobs:
   docker:
     name: Docker build
     runs-on: self-hosted-ubuntu-23.04
     services:
-      # local registery
+      # local registry
       registry:
         image: registry:2
         ports:
@@ -25,8 +30,17 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Set Env
+        run: echo "IMAGE_SUFFIXED=${{ !startsWith(github.ref, 'refs/tags/v') && '-dev' || ''  }}" >> $GITHUB_ENV
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         with:
           driver-opts: network=host
 
@@ -37,23 +51,38 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ hashFiles('Dockerfile') }}
           restore-keys: ${{ runner.os }}-buildx-
 
-      - name: Build nitro-node docker
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            localhost:5000/ecoblock-node${{ env.IMAGE_SUFFIXED }}
+            ecoblocklabs/ecoblock-node${{ env.IMAGE_SUFFIXED }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
+
+      - name: Build ecoblock-node image
         uses: docker/build-push-action@v2
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           target: nitro-node
           push: true
           context: .
-          tags: localhost:5000/nitro-node:latest
+          tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-      - name: Build nitro-node-dev docker
+      - name: Build ecoblock-node-dev image
         uses: docker/build-push-action@v2
+        if: !startsWith(github.ref, 'refs/tags/v')
         with:
           target: nitro-node-dev
           push: true
           context: .
-          tags: localhost:5000/nitro-node-dev:latest
+          tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
@@ -62,7 +91,7 @@ jobs:
         run: |
           # Unfortunately, `docker cp` seems to always result in a "permission denied"
           # We work around this by piping a tarball through stdout
-          docker run --rm --entrypoint tar localhost:5000/nitro-node-dev:latest -cf - target/machines/latest | tar xf -
+          docker run --rm --entrypoint tar localhost:5000/ecoblock-node${{ env.IMAGE_SUFFIXED }}:latest -cf - target/machines/latest | tar xf -
           module_root="$(cat "target/machines/latest/module-root.txt")"
           echo "::set-output name=module-root::$module_root"
           echo -e "\x1b[1;34mWAVM module root:\x1b[0m $module_root"
