--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build ecoblock-node image
         uses: docker/build-push-action@v2
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
           target: nitro-node
           push: true
@@ -77,7 +77,7 @@ jobs:
 
       - name: Build ecoblock-node-dev image
         uses: docker/build-push-action@v2
-        if: !startsWith(github.ref, 'refs/tags/v')
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
         with:
           target: nitro-node-dev
           push: true
