--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -68,7 +68,7 @@ jobs:
         uses: docker/build-push-action@v2
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
-          target: nitro-node
+          target: nitro-node-default
           push: true
           context: .
           tags: ${{ steps.meta.outputs.tags }}
