--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -68,7 +68,7 @@ jobs:
         uses: docker/build-push-action@v2
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
-          target: nitro-node-default
+          target: nitro-node
           push: true
           context: .
           tags: ${{ steps.meta.outputs.tags }}
@@ -91,7 +91,7 @@ jobs:
         run: |
           # Unfortunately, `docker cp` seems to always result in a "permission denied"
           # We work around this by piping a tarball through stdout
-          docker run --rm --entrypoint tar ${{ fromJSON(steps.meta.outputs.json).tags[0] }} -cf - target/machines/latest | tar xf -
+          docker run --rm --entrypoint tar ${{ fromJSON(steps.meta.outputs.json).tags[0] }} -cf - target/machines | tar xf -
           module_root="$(cat "target/machines/latest/module-root.txt")"
           echo "::set-output name=module-root::$module_root"
           echo -e "\x1b[1;34mWAVM module root:\x1b[0m $module_root"
